# mapping

./: .gitignore  Makefile  README.md  bg-start.sh  bg-stop.sh  build-display.sh  build-robot.sh  build-simulation.sh  build.sh  connect-2.sh  connect.sh  copy-2.sh  copy.sh  rpi.sh  run-display.sh  run-robot.sh  run-simulation.sh  run-stop.sh  show-old-data.py
brain/: Makefile
brain/common/: cannon.cpp  cannon.hpp  canvas.hpp  icp.cpp  icp.hpp  lidar.hpp  math.cpp  math.hpp  motors.cpp  motors.hpp  nodemap.hpp  pins.hpp  util.hpp  window.cpp  window.hpp
breezyslam/: pybreezyslam.c  setup.py
data/: output6.pickle  output7.pickle
old_scripts/: connect-2.sh  connect.sh  run-display.sh  run-robot.sh
resources/: lines.csv  lines.txt  svgtolines.py
resurser/: lidar.py  lines.csv  lines.txt  pyurg.py  svgtolines.py
rustfire/: .gitignore  Cargo.toml  rpi.sh  shell.nix  x.sh
rustfire/.cargo/: config.toml
rustfire/display/: main.js  msgpack.js  socket.js  svg.js
rustfire/display/static/: index.html
rustfire/src/: lib.rs  map.rs  math.rs  path_finding.rs
rustfire/src/component/: cameras.rs  find.rs  microphone.rs  mod.rs  real_cameras.rs  real_lidar.rs  serial.rs  simulated.rs  wheels.rs
rustfire/src/display/: http_ws.rs  mod.rs
rustfire/src/localizer/: icp.rs  mod.rs  noop.rs
src/common/: canvas.cpp  icp.cpp  icp.hpp  lidar.cpp  lidar.hpp  math.cpp  math.hpp  motors.cpp  nodemap.cpp  pins.cpp  serial.cpp  serial.hpp  util.cpp  util.hpp  window.cpp
src/display/: main.cpp  window.cpp
src/robot/: main.cpp
src/simulation/: NodeMap.cpp  main.cpp
(+9 files in other folders)
